# todo-list-app

./: README.md  pyproject.toml
edtodo/: __init__.py  __main__.py  cli.py  config.py  database.py  edtodo.py
