[tool.poetry]
name = "todo-list-app"
version = "0.1.0"
description = "Simple command line application to manage todo lists"
authors = ["Eric Dasse <christ.gououi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "todo_list_app" }]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
colorama = "^0.4.6"
shellingham = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
