[tool.poetry]
name = "todo-list-app"
version = "0.1.0"
description = "Simple command line application to manage todo lists"
authors = ["Eric Dasse <christ.gououi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "todo_list_app" }]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
colorama = "^0.4.6"
shellingham = "^1.5.3"


[tool.poetry.group.test.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pylint = "^2.17.5"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
